# geodesy

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
docs/: api.md  conf.py  index.md
src/geodesy/: __init__.py  datum.py  ellipsoid.py
tests/: __init__.py  test_datum.py  test_ellipsoid.py  test_geodesy.py
