[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[project]
name = "geodesy"
version = "2026.1.0"
description = "geodesy is a zero-dependency, pure Python package for handling coordinates. It can convert coordinates for a point from one Coordinate Reference System (CRS) to another, and also calculate distance and bearing between points."
authors = [{name = "Steven van de Graaf", email = "steven@vandegraaf.xyz"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
requires-python = ">=3.10, <4"
dependencies = []

[dependency-groups]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinxext-opengraph",
]
tests = [
    "pytest",
    "pytest-cov",
]
typing = [
    "mypy",
    "pyrefly",
    "ty",
]
dev = [
    { include-group = "docs" },
    { include-group = "tests" },
    { include-group = "typing" },
    "prek",
]

[project.urls]
Documentation = "https://geodesy.readthedocs.io/en/stable/"
Changelog = "https://geodesy.readthedocs.io/en/stable/changelog.html"
"Source Code" = "https://github.com/sgraaf/geodesy"
"Issue Tracker" = "https://github.com/sgraaf/geodesy/issues"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma (flake8-commas), handled by the formatter
    "D102",  # undocumented-public-method (pydocstyle)
    "D105",  # undocumented-magic-method (pydocstyle)
    "D107",  # undocumented-public-init (pydocstyle)
    "E501",  # line-too-long (pycodestyle), handled by the formatter
    "PLC2401",  # non-ascii-name (Pylint)
    "S101",   # assert (flake8-bandit)
    "S314",  # suspicious-xml-element-tree-usage (flake8-bandit)
    "SLF001",  # private-member-access (flake8-self)
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # unused-import (Pyflakes)
]
"docs/conf.py" = [
    "INP001",  # implicit-namespace-package (flake8-no-pep420)
]
"tests/**/test_*.py" = [
    "D",  # pydocstyle
    "PLR2004",   # magic-value-comparison (Pylint)
    "S101",   # assert (flake8-bandit)
    "SIM300",   # yoda-conditions (flake8-simplify)
]

[tool.mypy]
python_version = "3.10"
